--- a/Module 4/Code Along The Repository Layer/TaskManager/pom.xml
+++ b/Module 4/Code Along The Repository Layer/TaskManager/pom.xml
@@ -21,6 +21,13 @@
             <version>5.8.0</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Annotations -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.22</version>
+        </dependency>
     </dependencies>
 
 </project>
